// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend.jobqueue;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "JobQueueProto";
option java_package = "com.google.aggregate.protos.shared.backend.jobqueue";

// Class to represent an item on the job queue.
message JobQueueItem {
  // Set the key of the job as a String
  string job_key_string = 1;

  // Set the processing time-out of the job, after which the message will be
  // visible to other workers
  google.protobuf.Duration job_processing_timeout = 2;

  // Set the processing start time.
  google.protobuf.Timestamp job_processing_start_time = 3;

  // Set the item receipt info that will be used to acknowledge processing of
  // the item with the JobQueue.
  //
  // At present all the JobQueue implementations can use a string for this
  // field, but in the future it can be replaced by a more complex object or
  // AutoOneOf if needed.
  string receipt_info = 4;

  string server_job_id = 5;
}
